解决xml文件配置问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.devtools.restart.additional-paths=src/main/java
 #mybatis.mapper-locaitons= classpath*:com/example/mapper/*.xml
 mybatis.mapper-locations=classpath*:com/zjy/mapper/*.xml
 # 类的别名的包
-mybatis.type-aliases-package=com.zjy.entity
+mybatis.type-aliases-package=com/zjy/entity
 #驼峰命名法
 mybatis.configuration.mapUnderscoreToCamelCase=true
 #允许返回多个结果集
