--- a/pom.xml
+++ b/pom.xml
@@ -55,14 +55,11 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources/mapper</directory>
-                <!-- src/main/resources下的指定资源放行 -->
+                <directory>src/main/java</directory>
                 <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.yml</include>
                     <include>**/*.xml</include>
                 </includes>
-                <filtering>false</filtering>
+                <filtering>true</filtering>
             </resource>
         </resources>
 
